(former entries of HOL-Isar_Examples).

* Definitions in locales produce rule which can be added as congruence
rule to protect foundational terms during simplification.

* Consolidated terminology and function signatures for nested targets:

  * Local_Theory.begin_nested replaces Local_Theory.open_target.

  * Local_Theory.end_nested replaces Local_Theory.close_target.

INCOMPATIBILITY.


*** HOL ***

* Nitpick/Kodkod may be invoked directly within the running
Isabelle/Scala session (instead of an external Java process): this
improves reactivity and saves resources. This experimental feature is
guarded by system option "kodkod_scala" (default: true).

* Session HOL-Examples contains notable examples for Isabelle/HOL
(former entries of HOL-Isar_Examples, HOL-ex etc.).

* Simproc "defined_all" and rewrite rule "subst_all" perform more
aggressive substitution with variables from assumptions.
INCOMPATIBILITY, consider repairing proofs locally like this:

  supply subst_all [simp del] [[simproc del: defined_all]]

* Simproc "datatype_no_proper_subterm" rewrites equalities "lhs = rhs"
on datatypes to "False" if either side is a proper subexpression of the
other (for any datatype with a reasonable size function).

* New constant "power_int" for exponentiation with integer exponent,
written as "x powi n".

* Added the "at most 1" quantifier, Uniq.

* For the natural numbers, Sup {} = 0.

* Updated the Metis prover underlying the "metis" proof method to
  version 2.4 (release 20180810). The new version fixes one soundness
  defect and two incompleteness defects. Very slight INCOMPATIBILITY.

* Library theory "Bit_Operations" with generic bit operations.

* Library theory "Signed_Division" provides operations for signed
division, instantiated for type int.

* Session HOL-Word: Type word is restricted to bit strings consisting
of at least one bit.  INCOMPATIBILITY.

* Session HOL-Word: Various operations dealing with bit values